Added mens womens

--- a/src/components/mens/men/men.component.html
+++ b/src/components/mens/men/men.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="image-card">
         <a href="productdetails">
-        <img class="image" src="https://i.pinimg.com/originals/3d/ad/13/3dad1341a362b575acc672fdc874f4d7.jpg" alt="">
+        <img class="image" src="https://assets.ajio.com/medias/sys_master/root/20230907/ow1O/64f91d04ddf7791519c0b1fe/-473Wx593H-466542753-blue-MODEL.jpg" alt="">
         </a>
         <div class="image-info">
             <p class="image-name">Image 1</p>
