--- a/src/components/mens/productdetails/productdetails.component.html
+++ b/src/components/mens/productdetails/productdetails.component.html
@@ -1,15 +1,76 @@
-<div>
-    <div class="container">
-      <div class="related-images">
-        <img class="image" src="https://i.pinimg.com/originals/3d/ad/13/3dad1341a362b575acc672fdc874f4d7.jpg">
-        <img class="image" src="https://i.pinimg.com/originals/3d/ad/13/3dad1341a362b575acc672fdc874f4d7.jpg">
-        <img class="image" src="https://i.pinimg.com/originals/3d/ad/13/3dad1341a362b575acc672fdc874f4d7.jpg">
-        <img class="image" src="https://i.pinimg.com/originals/3d/ad/13/3dad1341a362b575acc672fdc874f4d7.jpg">
-        <img class="image" src="https://i.pinimg.com/originals/3d/ad/13/3dad1341a362b575acc672fdc874f4d7.jpg">
-      </div>
-      <div class="main-image">
-        <img class="mainimage" [src]="mainImageSrc" alt="Main Image">
-      </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-1">
+            <div class="related-images">
+                <!-- Related images (thumbnails) -->
+                <img class="image" src="https://assets.ajio.com/medias/sys_master/root/20230907/ow1O/64f91d04ddf7791519c0b17e/-1117Wx1400H-466542753-blue-MODEL.jpg" 
+                     (click)="changeMainImage('https://assets.ajio.com/medias/sys_master/root/20230907/ow1O/64f91d04ddf7791519c0b17e/-1117Wx1400H-466542753-blue-MODEL.jpg')">
+        
+                <img class="image" src="https://assets.ajio.com/medias/sys_master/root/20230907/3AYj/64f91d0addf7791519c0b267/-1117Wx1400H-466542753-blue-MODEL4.jpg"
+                     (click)="changeMainImage('https://assets.ajio.com/medias/sys_master/root/20230907/3AYj/64f91d0addf7791519c0b267/-1117Wx1400H-466542753-blue-MODEL4.jpg')">
+                   
+                <img class="image" src="https://assets.ajio.com/medias/sys_master/root/20230907/DYyS/64f91d0addf7791519c0b244/-473Wx593H-466542753-blue-MODEL6.jpg"
+                     (click)="changeMainImage('https://assets.ajio.com/medias/sys_master/root/20230907/DYyS/64f91d0addf7791519c0b244/-473Wx593H-466542753-blue-MODEL6.jpg')">
+                   
+                <img class="image" src="https://assets.ajio.com/medias/sys_master/root/20230907/O2KA/64f91d0addf7791519c0b272/-1117Wx1400H-466542753-blue-MODEL5.jpg" 
+                     (click)="changeMainImage('https://assets.ajio.com/medias/sys_master/root/20230907/O2KA/64f91d0addf7791519c0b272/-1117Wx1400H-466542753-blue-MODEL5.jpg')">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="image-container" (mousemove)="zoomImage($event)" (mouseleave)="resetZoom()">
+                <img #image class="mainimage" [src]="mainImageSrc" alt="Main Image">
+                <!-- Lens for zooming effect -->
+                <div class="zoom-lens" #lens></div>
+                <div class="zoom-result" #result></div>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="product-details" style="margin-top: 20px;">
+                <h2>HELLO DESIGN Printed A-Line Dress with Belt</h2>
+                <div class="ratings">
+                    <span>3.3</span> <!-- Star rating -->
+                    <span>1.1K Ratings</span>
+                </div>
+                <div class="price">
+                    <span>₹520</span> <!-- Discounted price -->
+                    <span class="mrp">MRP ₹1,999</span> <!-- Original price -->
+                    <span class="discount">74% OFF</span>
+                </div>
+                <p>Price inclusive of all taxes</p>
+                <div class="promo">
+                    <p>Use Code <strong>NEW250</strong> T&C</p>
+                    <p>Get it for ₹389</p>
+                    <p>Get Flat Rs 250 Off on cart value of 990 & Above. <a href="#">View All Products</a></p>
+                </div>
+                <div class="color">
+                    <p>Blue</p> <!-- Color options -->
+                </div>
+                <div class="size">
+                    <p>Select Size</p>
+                    <ul>
+                        <li>S</li>
+                        <li>M</li>
+                        <li>L</li>
+                        <li>XL</li>
+                        <li>XXL</li>
+                    </ul>
+                    <p><a href="#">Check Size Chart</a></p>
+                </div>
+                <button class="cart">Add to Bag</button>
+                <p>Handpicked Styles | Assured Quality</p>
+                <button class="button-89">Save to Wishlist</button>
+                <div class="product-info">
+                    <h3>Product Details</h3>
+                    <ol></ol>
+                    <li>Package contains: 1 dress</li>
+                    <li>Hand Wash</li>
+                    <li>Creap</li>
+                    <li>Product Code: 466542753004</li>
+                    <li>Other Information</li>
+                   
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  
+</div>
