--- a/src/components/Home/home/home.component.html
+++ b/src/components/Home/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="overflow-x: hidden;">
   <h4 class="Socialmedia">SHOP BY CATEGORY</h4>
   <div class="row">
-    <div style="text-align: center">
+    <div style="text-align: center" class="">
       <a href="men">
         <img
           class="image"
