--- a/src/components/mens/men/men.component.html
+++ b/src/components/mens/men/men.component.html
@@ -5,15 +5,16 @@
         </a>
         <div class="image-info">
             <p class="image-name">Image 1</p>
-            <p class="image-subtext">Description of Image 1</p>
+            <p class="image-subtext" style="font-size: 14px;">HELLO DESIGN Printed A-Line Dress with Belt</p>
             <p class="image-price">$100</p>
         </div>
     </div>
+
     <div class="image-card">
         <img class="image" src="https://i.pinimg.com/736x/4e/5e/be/4e5ebea0e7a032360664809514a1ed65.jpg" alt="">
         <div class="image-info">
             <p class="image-name">Image 2</p>
-            <p class="image-subtext">Description of Image 2</p>
+            <p class="image-subtext">One piece DESIGN </p>
             <p class="image-price">$150</p>
         </div>
     </div>
@@ -21,7 +22,7 @@
         <img class="image" src="https://www.aishwaryadesignstudio.com/content/images/thumbs/0136461_impressive-pink-designer-indo-western-dress-with-jacket-for-sangeet-or-engagement_900.jpeg" alt="">
         <div class="image-info">
             <p class="image-name">Image 3</p>
-            <p class="image-subtext">Description of Image 3</p>
+            <p class="image-subtext">Traditional Saree</p>
             <p class="image-price">$200</p>
         </div>
     </div>
@@ -29,7 +30,7 @@
         <img class="image" src="https://cdn.shopify.com/s/files/1/0049/3649/9315/files/koskii-ranipink-zariwork-net-designer-saree-saus0029319_ranipink_2_large.jpg" alt="">
         <div class="image-info">
             <p class="image-name">Image 4</p>
-            <p class="image-subtext">Description of Image 4</p>
+            <p class="image-subtext">Traditional Saree</p>
             <p class="image-price">$250</p>
         </div>
     </div>
